- Cropping height and width issue fixed. - Notify for uploading photos

--- a/frontend/web/css/customstyle.css
+++ b/frontend/web/css/customstyle.css
@@ -334,3 +334,11 @@ img.selected {
     font-size: 20px;
     background-color: #FFDC00;
 }
+
+#changePic {
+    margin-top: -22px !important;
+}
+
+.crop_save {
+    margin-top: -30px !important;
+}
